--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <title>Vite + React</title>
   </head>
-  <body>
+  <body data-direction="rtl">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
