--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body data-direction="rtl" data-sidebar-position="right">
     <div id="root"></div>
-    <div class="modal"></div>
+    <div id="modal"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
